Initial project setup
- Configure CMake build system with C++20 and vcpkg
- Add Google Test integration with sample tests
- Setup ASAN/UBSAN for debug builds
- Add VS Code configuration for IntelliSense
- Create GitHub Actions CI/CD pipeline
- Add example vulnerable target binary
- Configure project structure following Microsoft conventions
- Add comprehensive .gitignore for C++ projects

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,84 @@
 *.exe
 *.out
 *.app
+
+# Build directories
+/Build/
+/build/
+/builds/
+/out/
+
+# CMake generated files
+CMakeCache.txt
+CMakeFiles/
+CMakeScripts/
+cmake_install.cmake
+Makefile
+*.cmake
+!CMakeLists.txt
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps/
+
+# vcpkg
+vcpkg_installed/
+.vcpkg-root
+
+# Visual Studio
+.vs/
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
+*.sln
+
+# Coverage reports
+coverage/
+*.gcov
+*.gcda
+*.gcno
+
+# Profiling
+*.prof
+callgrind.out.*
+perf.data*
+
+# Sanitizer outputs
+*.asan
+*.ubsan
+*.tsan
+
+# Test outputs
+Testing/
+test_results/
+gtest_output.xml
+
+# Package files
+*.deb
+*.rpm
+*.tar.gz
+*.zip
+
+# Logs
+*.log
+
+# Temporary files
+*~
+*.tmp
+*.temp
+.DS_Store
+Thumbs.db
+
+# IDE files
+*.swp
+*.swo
+*~
+
+# Conan (if you ever use it)
+conandata.txt
+conaninfo.txt
+conanbuildinfo.*
+
+# GitHub Actions (keep workflows)
+!.github/
+!.github/workflows/
